# BarMaker

./: main.py  pyproject.toml
bar_maker/: __init__.py
bar_maker/core/: __init__.py  factory.py
bar_maker/tasks/: __init__.py  aggregate.py  filesystem.py
bar_maker/tasks/read/: __init__.py  read.py  read_parquet.py
